<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activities.LogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:radius="55dp"
            app:srcCompat="@drawable/countera1"
            tools:layout_conversion_wrapHeight="0"
            tools:layout_conversion_wrapWidth="1080" />

        <EditText
            android:id="@+id/tarih_editText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:ems="10"
            android:hint="@string/Specific_Date"
            android:inputType="date"
            android:textSize="15sp"
            tools:layout_conversion_wrapHeight="108"
            tools:layout_conversion_wrapWidth="1075" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ListData"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/List_All"
                android:textSize="15sp"
                tools:layout_conversion_wrapHeight="131"
                tools:layout_conversion_wrapWidth="525" />

            <Button
                android:id="@+id/tarih_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="11"
                android:background="@drawable/rounded_corner"
                android:text="@string/List_Specific_Date"
                android:textSize="15sp"
                tools:layout_conversion_wrapHeight="131"
                tools:layout_conversion_wrapWidth="525" />
        </LinearLayout>

        <GridView
            android:id="@+id/gridView"
            android:layout_width="wrap_content"
            android:layout_height="327dp"
            android:layout_margin="5dp"
            android:layout_weight="9"
            android:background="#15000000"
            android:textColor="#FFFFFF"
            tools:layout_conversion_wrapHeight="974"
            tools:layout_conversion_wrapWidth="1080" />

        <Button
            android:id="@+id/MainPage"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:text="@string/Go_Back"
            android:textSize="15sp"
            tools:layout_conversion_wrapHeight="134"
            tools:layout_conversion_wrapWidth="1080" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>